k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: production-platform-api
  namespace: production-platform

spec:
  type: ClusterIP

  selector:
    app: production-platform-api

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
