k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: production-platform-api-ingress
  namespace: production-platform

spec:
  ingressClassName: nginx

  rules:
    - host: production-platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: production-platform-api
                port:
                  number: 8000
